--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,8 @@ name: waymo_open_env
 channels:
   - defaults
   - conda-forge
+  - pytorch
+  - nvidia
 dependencies:
   - black=24.4.2
   - blas=1.0
@@ -30,12 +32,15 @@ dependencies:
   - python=3.9
   - python-dateutil=2.9.0post0
   - python-tzdata=2023.3
+  - pytorch
+  - pytorch-cuda=11.8
   - pytz=2024.1
   - setuptools=69.5.1
   - simplekml=1.3.6
   - six=1.16.0
   - sqlite=3.45.3
   - tbb=2021.8.0
+  - torchvision
   - tk=8.6.14
   - tzdata=2024a
   - wheel=0.43.0
