--- a/environment.yml
+++ b/environment.yml
@@ -32,7 +32,7 @@ dependencies:
   - python=3.9
   - python-dateutil=2.9.0post0
   - python-tzdata=2023.3
-  - pytorch
+  - pytorch=2.3.0
   - pytorch-cuda=11.8
   - pytz=2024.1
   - setuptools=69.5.1
